k8s-manifests/hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: paulbouwer/hello-kubernetes:1.10 # Pre-built hello world image
        ports:
        - containerPort: 8080
